# yt-downloader

./: .gitignore  README.md  pyproject.toml
yt_downloader/: __main__.py  validation.py  yt_dl.py
