[tool.poetry]
name = "yt-downloader"
version = "1.0.0"
description = "Downloads YouTube videos"
authors = ["Rafal Pogorzelski <raf88pogo@gmail.com>"]

[tool.poetry.dependencies]
python = ">3.8"
pytube = "^12.1.0"
halo = "^0.0.31"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yt-downloader = "yt_downloader.__main__:main"